--- a/.gitignore
+++ b/.gitignore
@@ -22,5 +22,4 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-/public/uploads-files-2763799-Tesla+Model+obj
-/uploads-files-2763799-Tesla+Model+obj
+/public
