--- a/.gitignore
+++ b/.gitignore
@@ -22,5 +22,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-public/uploads-files-2763799-Tesla+Model+obj/Tesla Model.obj
+public/uploads-files-2763799-Tesla+Model+obj/Tesla_Model.obj
+public/uploads-files-2763799-Tesla+Model+obj/Tesla_Model.mtl
+
 
